# kf

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  appicon.aps  kf_master.py  kfnetcode.py  net_code_gen.py  net_format.txt  shader_include.py  sound_load.py
kfcompilegui/: app.cpp  app.h  frame.cpp  frame.h  kfcompilegui.sln  kfcompilegui.vcxproj  kfcompilegui.vcxproj.filters  process.cpp  process.h
libs/glm/glm/detail/: func_geometric.inl
libs/http/include/: http.h  json.hpp
libs/md5/: md5.c  md5.h
libs/soloud/Release/: soloud_static.lib
libs/soloud/include/: soloud_audiosource.h
libs/stb/: stb_image.h  stb_image_write.h
res/: config.cfg  serverconfig.cfg
res/saves/: corn.ksv
src/: kfglobal.h  splash_data.h
src/compiler/: compiler.cpp  compiler.h  entity.cpp  entity.h  map_file.cpp  map_file.h  model_file.h  poly.h  surface_flags.h
src/compiler/brush/: brush.cpp  brush.h  brush_face.cpp  brush_face.h  brush_vertex.cpp  brush_vertex.h
src/compiler/bsp/: bsp_cell.h  bsp_grid.cpp  bsp_grid.h  bsp_node.cpp  bsp_node.h  bsp_tree.cpp  bsp_tree.h  portal.cpp  portal.h  surface.cpp  surface.h
src/compiler/light/: face_attribs.cpp  face_attribs.h  light_ent.cpp  light_ent.h  light_para.cpp  light_para.h  light_point.cpp  light_point.h  light_spot.cpp  light_spot.h  luxel.h
src/engine/: create_pools.cpp  game_instance.cpp  game_instance.h  save_game.cpp  save_game.h
src/engine/audio/: attached_sound.h  audio.cpp  audio.h  sound_asset.cpp  sound_asset.h  sound_instance.h  sound_list.cpp  sound_list.h  sound_load.cpp
src/engine/collision/: brush.cpp  brush.h  compiled_bsp_node.cpp  compiled_bsp_node.h  hit_result.cpp  hit_result.h  trace.cpp  trace.h
src/engine/console/: chat_console.cpp  chat_console.h  console_commands.cpp  engine_console.cpp  engine_console.h  pending_command.h  text_console.cpp  text_console.h
src/engine/game/: accumulator_loop.cpp  accumulator_loop.h  config.cpp  config.h  damage_number.cpp  damage_number.h  ent_creation.cpp  ent_creation.h  frag_message.cpp  frag_message.h  kill_feed_message.cpp  kill_feed_message.h  local_map.h  local_player.cpp  local_player.h  match.cpp  match.h  weapon_render.cpp  weapon_render.h
src/engine/global/: paths.h  types.h  types_container.h  types_numeric.h  types_ptr.h
src/engine/input/: binding.h  broadcast.cpp  broadcast.h  event.h  glfw_input.cpp  glfw_input.h  input_processor.cpp  input_processor.h  key_names.cpp  key_names.h  listener.cpp  listener.h  listener_console.cpp  listener_console.h  listener_game.cpp  listener_game.h  listener_keyboard.cpp  listener_keyboard.h  listener_menu.cpp  listener_menu.h  listener_typing.cpp  listener_typing.h  view.cpp  view.h
src/engine/kpool/: buffer.h  data_pool.h  data_pool_base.cpp  data_pool_base.h  pool_node.h  pool_ref.h  poolable.cpp  poolable.h
src/engine/kwad/: kwad_chunk.h  kwad_chunk_font.cpp  kwad_chunk_font.h  kwad_chunk_image.cpp  kwad_chunk_image.h  kwad_chunk_image_hud.cpp  kwad_chunk_image_hud.h  kwad_chunk_map.cpp  kwad_chunk_map.h  kwad_chunk_obj.cpp  kwad_chunk_obj.h  kwad_chunk_sound.cpp  kwad_chunk_sound.h  kwad_file.cpp  kwad_file.h  kwad_reader.cpp  kwad_reader.h
src/engine/math/: aabb.cpp  aabb.h  glm.cpp  glm.h  helper.h  line.cpp  line.h  line_segment.cpp  line_segment.h  mat3x3.cpp  mat3x3.h  math.cpp  math.h  packed_float.h  plane.cpp  plane.h  polygon.cpp  polygon.h  triangle.cpp  triangle.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/engine/menus/: basic_menu.cpp  basic_menu.h  menu_init.cpp  menu_option.cpp  menu_option.h  option_menu.cpp  option_menu.h
src/engine/net/: buffered_snapshot.h  client.cpp  client.h  game_state.cpp  game_state.h  net_interface.cpp  net_interface.h  net_stats.h  net_vector.cpp  net_vector.h  player.cpp  player.h  player_ping.cpp  player_ping.h  replicated_sound.cpp  replicated_sound.h  server.cpp  server.h  server_browser.cpp  server_browser.h  server_config.cpp  server_config.h  snapshot.cpp  snapshot.h  snapshottable.cpp  snapshottable.h  state.cpp  state.h
src/engine/render/: 2d_prim.h  buffer_render.cpp  bufferslots.h  camera.cpp  camera.h  camera_push.cpp  camera_push.h  color.cpp  color.h  communication.cpp  communication.h  debug_draw.cpp  debug_draw.h  draw_config.cpp  draw_config.h  font.cpp  font.h  font_usage.h  frame.cpp  frame_stats.cpp  frame_stats.h  input_layout.h  interface_templates.cpp  interface_test.cpp  light.cpp  light.h  light_para.h  light_point.h  light_spot.h  material.cpp  material.h  particle.cpp  particle.h  pending_commands.cpp  pending_commands.h  post.h  precipitation.cpp  precipitation.h  precipitation_buffer.cpp  render_buffer_info.cpp  (+11 more)
src/engine/replay/: replay_read.cpp  replay_read.h  replay_write.cpp  replay_write.h
src/engine/run/: k_main.cpp  k_main.h  linuxmain.cpp  winmain.cpp
src/engine/system/: hashed_poolable.h  message_pump.h  time.cpp  time.h
src/engine/utility/: bin_pack.h  delegate_bind.h  delegate_broadcast.h  delegate_listen.h  file_utility.cpp  file_utility.h  function_arg.h  k_assert.cpp  k_assert.h  kstring.cpp  kstring.h  macro.h  random.cpp  random.h  thread_pool.cpp  thread_pool.h
src/game/: character_info.cpp  character_info.h  cheat_manager.cpp  cheat_manager.h  collision_mask.h  damage_types.cpp  damage_types.h  on_screen_message.cpp  on_screen_message.h  pickup_message.cpp  pickup_message.h  player_score_info.h  saved_move.h  spec_point.cpp  spec_point.h  testmover.cpp  testmover.h  testproj.cpp  testproj.h  underwater_sound.cpp  underwater_sound.h
src/game/entity/: blast_explosion.cpp  blast_explosion.h  character.cpp  character.h  character_monster.cpp  character_monster.h  character_player.cpp  character_player.h  death_cam.cpp  death_cam.h  deferred_drop.cpp  deferred_drop.h  ent_prop.cpp  ent_prop.h  entity.cpp  entity.h  explosion.cpp  explosion.h  mover_info.h  pickup.cpp  pickup.h  powerup.cpp  powerup.h  powerup_index.h  projectile.cpp  projectile.h  smoke.cpp  smoke.h  smoke_sheet.cpp  smoke_sheet.h  spectator.cpp  spectator.h  weapon.cpp  weapon.h  weapon_index.h
(+337 files in other folders)
